# TetoDB

./: .clangd  .gitignore  .ninja_deps  .ninja_log  AccuracyTest.py  Benchmark.py  Btree.cpp  Btree.h  Btree.tpp  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  CommandParser.cpp  CommandParser.h  Common.h  Database.cpp  Database.h  LICENSE  Pager.cpp  Pager.h  README.md  RunAllBenchmarks.py  SQL_SYNTAX.md  Schema.cpp  Schema.h  TESTING_GUIDE.md  TetoDB.cpp  USER_GUIDE.md  compile_commands.json  e2e.catalog  test_1_1_isolation.py  test_1_2_fk_isolation.py  test_1_3_lock_upgrade.sql  test_1_3_phantom_isolation.py  test_1_5_relocation.sql  test_1_9_fsm_phase1.sql  test_1_9_fsm_phase2.sql  test_2_3_planner.sql  test_2_4_not_null.sql  test_2_5_aggregates.sql  (+32 more)
.cache/clangd/index/: abstract_executor.h.D2CA59EEA075A959.idx  abstract_expression.h.33283ADFFEE965D7.idx  abstract_index_iterator.h.50CC7E0EED854446.idx  abstract_plan.h.C305818DABD4873C.idx  aggregation_executor.cpp.DBAFDFB90CBBEF9F.idx  aggregation_executor.h.7EE6A330A456424E.idx  aggregation_plan.h.F494A3A2EDD4F3C0.idx  (+138 more)
docs/: architecture.md  limitations.md  python-sqlalchemy.md  quickstart.md  sql-reference.md  testing-and-benchmarking.md  todo-demo.md
include/tetodb/: Btree.h  Btree.tpp  Database.h  Pager.h  Schema.h
python/: .gitignore  TODO.c  setup.py  test_orm.py  test_psycopg3.py  test_sqlalchemy.py  test_tetodb_orm.py
python/tetodb/: __init__.py  dbapi.py  dialect.py
scripts/: AccuracyTest.py  Benchmark.py
src/: CMakeLists.txt  CommandDispatcher.cpp  CommandParser.cpp  Database.cpp  Pager.cpp  Schema.cpp  TetoDB.cpp  benchmarks.cpp  client_main.cpp  main.cpp  server_main.cpp  test_bug16_like_microbenchmark.cpp  test_bug17_div_microbenchmark.cpp  test_bug18_bpm_eviction.cpp  test_bug19_fk_cascade.cpp  test_bug20_arithmetic.cpp  test_bug4_orphan.cpp  test_bug7_compaction.cpp  test_c1_stale_offset.cpp  test_c2_newpage_wal.cpp  test_h1_multi_column_fk.cpp  test_h2_recovery_update.cpp  test_m10_drop_table_fk_cleanup.cpp  test_units.cpp  teto_instance.h
src/implementation/catalog/: catalog.cpp
src/implementation/concurrency/: lock_manager.cpp  transaction_manager.cpp
src/implementation/execution/: fk_constraint_handler.cpp
src/implementation/execution/executors/: aggregation_executor.cpp  delete_executor.cpp  distinct_executor.cpp  execution_engine.cpp  filter_executor.cpp  hash_join_executor.cpp  index_scan_executor.cpp  insert_executor.cpp  limit_executor.cpp  nested_loop_join_executor.cpp  projection_executor.cpp  seq_scan_executor.cpp  set_op_executor.cpp  sort_executor.cpp  topn_executor.cpp  update_executor.cpp
src/implementation/index/: b_plus_tree.cpp
src/implementation/optimizer/: optimizer.cpp
src/implementation/parser/: lexer.cpp  parser.cpp
src/implementation/planner/: planner.cpp
src/implementation/recovery/: checkpoint_manager.cpp  log_manager.cpp  log_record.cpp  recovery_manager.cpp
src/implementation/server/: tcp_server.cpp  tetodb_instance.cpp
src/implementation/storage/buffer/: buffer_pool_manager.cpp  two_queue_replacer.cpp
src/implementation/storage/disk/: disk_manager.cpp
src/implementation/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  table_page.cpp
src/implementation/storage/table/: table_heap.cpp  table_iterator.cpp  tuple.cpp
src/implementation/type/: tuple.cpp  type.cpp  value.cpp
src/include/: teto_db.h
src/include/binder/: binder.h
src/include/catalog/: catalog.h  column.h  schema.h
src/include/common/: config.h  exceptions.h  record_id.h  rwlatch.h
src/include/concurrency/: index_write_record.h  lock_manager.h  table_write_record.h  transaction.h  transaction_manager.h
src/include/execution/: execution_context.h  execution_engine.h  fk_constraint_handler.h
src/include/execution/executors/: abstract_executor.h  aggregation_executor.h  delete_executor.h  distinct_executor.h  filter_executor.h  hash_join_executor.h  index_scan_executor.h  insert_executor.h  join_executor.h  limit_executor.h  nested_loop_join_executor.h  projection_executor.h  seq_scan_executor.h  set_op_executor.h  sort_executor.h  topn_executor.h  update_executor.h
src/include/execution/expressions/: abstract_expression.h  arithmetic_expression.h  column_value_expression.h  comparison_expression.h  constant_value_expression.h  in_expression.h  logic_expression.h  parameter_value_expression.h  string_expression.h
src/include/execution/plans/: abstract_plan.h  aggregation_plan.h  delete_plan.h  distinct_plan.h  filter_plan.h  hash_join_plan.h  index_scan_plan.h  insert_plan.h  limit_plan.h  nested_loop_join_plan.h  projection_plan.h  seq_scan_plan.h  set_op_plan.h  sort_plan.h  topn_plan.h  update_plan.h
src/include/index/: abstract_index_iterator.h  b_plus_tree.h  b_plus_tree_index.h  generic_key.h  index.h  index_iterator.h
src/include/optimizer/: optimizer.h  optimizer_internal.h  statistics.h
src/include/parser/: ast.h  lexer.h  parser.h
src/include/planner/: planner.h
src/include/recovery/: checkpoint_manager.h  log_manager.h  log_record.h  recovery_manager.h
src/include/server/: tcp_server.h  tetodb_instance.h
src/include/storage/buffer/: buffer_pool_manager.h  lru_k_replacer.h  two_queue_replacer.h
src/include/storage/disk/: disk_manager.h
src/include/storage/page/: b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  header_page.h  page.h  page_guard.h  table_page.h
src/include/storage/table/: table_heap.h  table_iterator.h  tuple.h
src/include/type/: type.h  type_id.h  value.h
test/: storage_test.cpp  test_empty_agg.cpp  test_like_bug.cpp  test_savepoint.cpp
tests/: CMakeLists.txt  DatabaseTests.cpp
tetodb_todo_webapp/: README.md
tetodb_todo_webapp/backend/: requirements.txt  test_init.py
tetodb_todo_webapp/frontend/: app.js  index.html  package-lock.json  package.json
todo-app/backend/: db_helpers.py  main.py
todo-app/frontend/: index.html  package-lock.json  package.json
todo-tetodb/: README.md
todo-tetodb/frontend/: index.html  package-lock.json  package.json
(+11 files in other folders)
